note about test and dev data

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 
         <h3> How do I use this demo? </h3>
         <p>
-          To interact with the Seq2Seq chatbot, type a question into the text box below, and hit 'Enter'. Or, to sample dialogue from the KVRET test set, hit 'Get Example Dialogue'. To clear the chat and the model's accumulated context, hit 'Clear
+          To interact with the Seq2Seq chatbot, type a question into the text box below, and hit 'Enter'. Or, to sample dialogue from the KVRET test and dev data, hit 'Get Example Dialogue'. To clear the chat and the model's accumulated context, hit
+          'Clear
           Chat'. For best results, ask about specific values in the knowledge base table.
           <br />
           <br />
