Moving code link to top

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         Seq2Seq network that
         is able to interact with an external knowledge base with no explicit representation of dialogue state. Additionally, the paper presents a new multi-turn, multi-domain, task-oriented dialogue dataset.
       </p>
+      <p>
+        Check out my code for the API and model training <a href="https://github.com/parkervg/kv-retrieval-net" target="blank_"> here</a>.
+      </p>
       <h3> What is "Multi-Turn, Multi-Domain, Task-Oriented Dialogue"? </h3>
       That's a lot of hyphens. Let's break it down:
       <p>
@@ -69,7 +72,6 @@
           Chat'. For best results, ask about specific values in the knowledge base table.
           <br />
           <br />
-          Check out the code for the API and model training <a href="https://github.com/parkervg/kv-retrieval-net" target="blank_"> here</a>.
         </p>
     </div>
   </div>
